--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,34 +1,36 @@
+body {
+  padding-top: 50px;
+}
 
 .puzzle {
-  background-color: black;
-  display: inline-block;
+  margin: 30px auto;
+  width: 500px;
 }
 
 .controls {
-  background-color: #ccc;
-  padding: 5px;
-}
-
-.controls button {
-  float: right;
-}
-
-.controls label {
-  font-size: 12px;
-  font-family: helvetica;
+  height: 65px;
+  background-color: #eee;
+  padding: 15px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border: 1px solid #ccc;
 }
 
 .tiles {
+  background-color: #222;
   position: relative;
-  height: 600px;
-  width: 600px;
+  height: 500px;
+
+  border-left: 1px solid #222;
+  border-top: 1px solid #222;
 }
 
 .tile {
   position: absolute;
-  -webkit-transition: left 0.3s ease-in-out, top 0.3s ease-in-out;
+  transition: left 0.3s ease-in-out, top 0.3s ease-in-out;
   box-sizing: border-box;
-  border: 1px solid black;
+  border-right: 1px solid #222;
+  border-bottom: 1px solid #222;
   background-color: white;
   z-index: 1;
 }
@@ -38,7 +40,29 @@
 .tile.nature { background-image: url(/img/nature.png); }
 
 .tile.blank {
-  background-color: black;
+  background-color: #222;
   background-image: none;
   z-index: 0;
+}
+
+.shake {
+  -webkit-animation: shake .5s linear;
+}
+
+@-webkit-keyframes shake {
+  8%, 41% {
+    -webkit-transform: translateX(-10px);
+  }
+  25%, 58% {
+    -webkit-transform: translateX(10px);
+  }
+  75% {
+    -webkit-transform: translateX(-5px);
+  }
+  92% {
+    -webkit-transform: translateX(5px);
+  }
+  0%, 100% {
+    -webkit-transform: translateX(0);
+  }
 }
